XRENDERING-509: Add support for HTML5 in the {{html}} Macro
* Switch to HTML 5 when the output syntax is HTML 5 or annotated HTML 5.
* Change the default output syntax to HTML 5.
* Do not assume that the rendering context has the target syntax set.
* Adapt tests.
* Migrate the unit test to Junit 5.
* Support "htmlmacro+xhtml/1.0" as alias for "xhtmlmacro/1.0" to avoid further special handling for the old hint.
* Indicate the actual HTML target syntax in the result.